--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <option value="expense">Expense</option>
             </select>
             <button id="addEntryBtn">Add Entry</button>
+          
         </div>
+        <div id="msg"></div>
 
         <!-- Filters -->
         <div class="filters">
@@ -42,9 +44,9 @@
         </div>
 
         <!-- Entry List Section -->
-        <ul id="entriesList">
+        <ol id="entriesList">
             <!-- List of income/expense items will be dynamically inserted here -->
-        </ul>
+        </ol>
     </div>
 
     <script src="script.js"></script>
